<resources>
    <string name="app_name">PurchaseCheckListApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_value">Добавить</string>
    <string name="edit">...</string>
    <string name="product">Продукт:</string>
    <string name="cnt">Количество(шт):</string>
    <string name="change_value">Изменить</string>
    <string name="del_value">Удалить</string>
</resources>


